# APItest_pytest_requests

./: .travis.yml  README.md  pyproject.toml
tests/: test_core.py
