[tool.poetry]
name = "apitest_pytest_requests"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "apache-2.0"

[tool.poetry.dependencies]
python = "^3.5"
pytest = "^6.1.2"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]
coverage = "^5.3"
coveralls = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
